Test correction cumulative layout shift

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@ body {
 	font-size: 26px;
 }
 
-section h1 {
+nav h1 {
 	font-size: 26px;
 }
 
@@ -54,26 +54,30 @@ section h1 {
 	position: relative;
 }
 
-.picture.left::before {
-	content: ' ';
-	background-color: #E5975F;
-	width: 374px;
-	height: 329px;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	z-index: -1;
-}
-
 .picture {
-	flex: 1;
-	margin: 0 20px;
-	z-index: 0;
+  flex: 1;
+  margin: 0 20px;
+  z-index: 0;
+  aspect-ratio: 1 / 1;
+  min-height: 600px;
+  position: relative; /* pour ::before */
 }
 
 .picture img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.picture.left::before {
+  content: ' ';
+  background-color: #E5975F;
+  width: 374px;
+  height: 329px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 }
 
 #about-me {
